refactor: 도메인 구조 변경 및 테스트 예외 처리 개선 - `example` 패키지 삭제 및 관련 클래스(User, Point) 이동 및 리팩터링 - 도메인 로직 내 `IllegalArgumentException`을 `CoreException`으로 변경 - `Money`, `Product`, `Stock` 등 클래스의 유효성 검사 및 예외 메시지 개선 - 사용자 초기 포인트(Point) 설정 로직 추가 - 불필요한 ID 및 필드 제거, VO 활용 범위 확장 - 관련테스트 예외 처리 변경